src/test/ui/test-attrs/test-warns-dead-code.stderr
error: function is never used: `dead`
  --> $DIR/test-warns-dead-code.rs:5:4
   |
LL | fn dead() {}
   |    ^^^^ help: if this is intentional, prefix it with an underscore: `_dead`
   |
   = note: The leading underscore signals to the reader that while the function may not be used
           by any Rust code, it still serves some other purpose that isn't detected by rustc.
           (e.g. some values are used for their effect when dropped or used in FFI code
           exclusively through raw pointers)
note: the lint level is defined here
  --> $DIR/test-warns-dead-code.rs:3:9
   |
LL | #![deny(dead_code)]
   |         ^^^^^^^^^

error: aborting due to previous error

